--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,12 +44,26 @@ jobs:
           git diff --compact-summary --exit-code || \
             (echo; echo "Unexpected difference in directories after code generation. Run 'go generate ./...' command and commit."; exit 1)
 
+  build-api:
+    name: Build API image
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    steps:
+      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+      - name: build
+        run: run: docker build -t api-server -f api-server.dockerfile .
+
   # Run acceptance tests in a matrix with Terraform CLI versions
   test:
     name: Terraform Provider Acceptance Tests
     needs: build
     runs-on: ubuntu-latest
     timeout-minutes: 5
+    services:
+      api:
+        image: api-server
+        ports:
+          - 8030:8030
     strategy:
       fail-fast: false
       matrix:
