--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,7 +56,9 @@ jobs:
   # Run acceptance tests in a matrix with Terraform CLI versions
   test:
     name: Terraform Provider Acceptance Tests
-    needs: build
+    needs:
+      - build
+      - build-api
     runs-on: ubuntu-latest
     timeout-minutes: 5
     services:
