--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,7 +51,7 @@ jobs:
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
       - name: build
-        run: run: docker build -t api-server -f api-server.dockerfile .
+        run: docker build -t api-server -f api-server.dockerfile .
 
   # Run acceptance tests in a matrix with Terraform CLI versions
   test:
