--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,21 +44,21 @@ jobs:
           git diff --compact-summary --exit-code || \
             (echo; echo "Unexpected difference in directories after code generation. Run 'go generate ./...' command and commit."; exit 1)
 
-  build-api:
-    name: Build API image
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
-    steps:
-      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
-      - name: build
-        run: docker build -t api-server -f api-server.dockerfile .
+  # build-api:
+  #   name: Build API image
+  #   runs-on: ubuntu-latest
+  #   timeout-minutes: 5
+  #   steps:
+  #     - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+  #     - name: build
+  #       run: docker build -t api-server -f api-server.dockerfile .
 
   # Run acceptance tests in a matrix with Terraform CLI versions
   test:
     name: Terraform Provider Acceptance Tests
     needs:
       - build
-      - build-api
+      # - build-api
     runs-on: ubuntu-latest
     timeout-minutes: 5
     services:
@@ -78,6 +78,10 @@ jobs:
         with:
           go-version-file: 'go.mod'
           cache: true
+      - name: build-api
+        run: docker build -t api-server -f api-server.dockerfile .
+      - name: start api
+        run: docker run -d -p 8030:8030 --name api api-server
       - uses: hashicorp/setup-terraform@633666f66e0061ca3b725c73b2ec20cd13a8fdd1 # v2.0.3
         with:
           terraform_version: ${{ matrix.terraform }}
