--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -78,7 +78,7 @@ jobs:
         with:
           go-version-file: 'go.mod'
           cache: true
-      - name: build-api
+      - name: build api
         run: docker build -t api-server -f api-server.dockerfile .
       - name: start api
         run: docker run -d -p 8030:8030 --name api api-server
@@ -89,5 +89,5 @@ jobs:
       - run: go mod download
       - env:
           TF_ACC: "1"
-        run: go test -v -cover ./internal/provider/
+        run: go test -v -cover ./...
         timeout-minutes: 5
